# stock_plotter

./: .gitignore  README.md  pyproject.toml  stockplotter.py  tester.py  tester1.py
tests/: test_stock_plotter.py
