[tool.poetry]
name = "stock_plotter"
version = "0.1.0"
description = ""
authors = ["Pieter Van Wyk <pietervw@advanceguidance.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
plotly = "^5.5.0"
pandas = "^1.3.5"
pandas-datareader = "^0.10.0"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
